[package]
authors = ["Meliodas"]
name = "safe_server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serenity = { version = "0.11", features = ["framework", "standard_framework"] }
tokio = { version = "1.21.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
